<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pert"
    tools:context=".Johneli">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText">
        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="45sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200sp"
            android:layout_height="190sp"
            android:src="@drawable/ugly"
            android:layout_marginTop="35sp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:text="@string/id_no_20191498"
            android:textColor="#00FFFF"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:text="@string/name_john_eli_d_ico"
            android:textColor="#1E90FF"
            android:textSize="27sp"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="175dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/bg"
            android:text="@string/logout"
            android:textColor="#FFFF"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        android:onClick = "lOGIN"

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>