<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/manila"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ucu"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60sp"
            android:text="UCU login"
            android:textSize="35sp"
            android:layout_marginBottom="20dp"
            tools:ignore="HardcodedText"
            android:textColor="#FF0000"/>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40sp"
            android:paddingRight="40sp">

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/boxes"
                android:drawableStart="@drawable/ic_baseline"
                android:drawablePadding="15dp"
                android:text="@string/username"
                android:importantForAutofill="no"/>
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/boxes"
                android:drawableStart="@drawable/ic_baseline_lock"
                android:drawablePadding="15dp"
                android:text="@string/password"
                android:autofillHints="@string/password"/>

         </LinearLayout>
        <Button
            android:id="@+id/button1"
            android:layout_width="175dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/bg"
            android:text="@string/login"
            android:textColor="#FFFF"
            android:textSize="20sp"/>

        android:onClick = "lOGIN"

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>